syntax = "proto3";

package webfs;
option go_package = "webfsim";

import "tree.proto";
import "ref.proto";

import "storespecs.proto";
import "cellspecs.proto";

message Object {
    oneof Value {
        File file = 1;
        Dir dir = 2;
        VolumeSpec volume = 3;
    }
}

message File {
    wrds.Tree tree = 1;
    uint64 size = 2;
}

message Dir {
    wrds.Tree tree = 1;
}

message DirEntry {
    string name = 1;
    Object object = 2;
}

message VolumeSpec {
    string id = 1;
    CellSpec cell_spec = 2;
    bytes aux_state = 3;
}

message Commit {
    webref.Ref object_ref = 1;
    Options options = 2;
}

// Volume Options
message Options {
    WriteOptions data_opts = 1;
    WriteOptions metadata_opts = 2;

    repeated StoreSpec store_specs = 3;
}

message WriteOptions {
    webref.EncAlgo enc_algo = 1;
    bytes secret_seed = 2;
    bool obfuscate_length = 3;

    map<string, int32> replicas = 4;
    string codec = 5;
}

message StoreSpec {
    string prefix = 1;

    oneof spec {
        HTTPStoreSpec http = 2;
        IPFSStoreSpec ipfs = 3;
    }
}